--- a/index.html
+++ b/index.html
@@ -636,6 +636,56 @@
                         </div>
                     </div>
 
+                    <!-- 11. COMPLETELY DIFFERENT LAYOUT: Hexagonal Grid -->
+                    <div class="theme-card bg-gradient-to-br from-slate-800 to-slate-900 border-2 border-blue-400 rounded-2xl p-6 cursor-pointer transition-all duration-300 hover:scale-105 hover:shadow-lg" data-theme="hexagonal-grid">
+                        <div class="text-center mb-4">
+                            <div class="w-16 h-16 bg-gradient-to-br from-blue-400 to-indigo-500 rounded-full mx-auto mb-3 flex items-center justify-center shadow-lg shadow-blue-400/50">
+                                <i class="fas fa-dice-d20 text-white text-2xl"></i>
+                            </div>
+                            <h3 class="text-lg font-bold text-blue-400">Hexagonal Grid</h3>
+                            <p class="text-slate-300 text-sm">Teljesen más layout - hatszögek</p>
+                        </div>
+                        <div class="space-y-2">
+                            <div class="flex justify-between text-xs text-slate-300">
+                                <span>Háttér:</span>
+                                <span class="font-semibold">Sötét</span>
+                            </div>
+                            <div class="flex justify-between text-xs text-slate-300">
+                                <span>Kerék:</span>
+                                <span class="font-semibold">Hatszög</span>
+                            </div>
+                            <div class="flex justify-between text-xs text-slate-300">
+                                <span>Stílus:</span>
+                                <span class="font-semibold">Geometrikus</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- 12. COMPLETELY DIFFERENT LAYOUT: Vertical Timeline -->
+                    <div class="theme-card bg-gradient-to-br from-slate-100 to-slate-200 border-2 border-slate-400 rounded-2xl p-6 cursor-pointer transition-all duration-300 hover:scale-105 hover:shadow-lg" data-theme="vertical-timeline">
+                        <div class="text-center mb-4">
+                            <div class="w-16 h-16 bg-gradient-to-br from-slate-500 to-slate-600 rounded-full mx-auto mb-3 flex items-center justify-center shadow-lg">
+                                <i class="fas fa-stream text-white text-2xl"></i>
+                            </div>
+                            <h3 class="text-lg font-bold text-slate-700">Vertical Timeline</h3>
+                            <p class="text-slate-600 text-sm">Teljesen más layout - függőleges</p>
+                        </div>
+                        <div class="space-y-2">
+                            <div class="flex justify-between text-xs text-slate-600">
+                                <span>Háttér:</span>
+                                <span class="font-semibold">Világos</span>
+                            </div>
+                            <div class="flex justify-between text-xs text-slate-600">
+                                <span>Kerék:</span>
+                                <span class="font-semibold">Függőleges</span>
+                            </div>
+                            <div class="flex justify-between text-xs text-slate-600">
+                                <span>Stílus:</span>
+                                <span class="font-semibold">Timeline</span>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
