Fix readability issues: improve text contrast on wheel segments and header buttons across all themes

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
                 <i class="fas fa-dice"></i> Szerencsekerék
             </h1>
             <div class="flex gap-3">
-                <button id="statsBtn" class="bg-white/20 border-2 border-white/30 text-white px-6 py-3 rounded-full cursor-pointer font-semibold transition-all duration-300 backdrop-blur-sm flex items-center gap-2 hover:bg-white/30 hover:-translate-y-1 hover:shadow-lg mt-2">
+                <button id="statsBtn" class="bg-white/10 border-2 border-white/40 text-white px-6 py-3 rounded-full cursor-pointer font-semibold transition-all duration-300 backdrop-blur-sm flex items-center gap-2 hover:bg-white/25 hover:-translate-y-1 hover:shadow-lg mt-2 shadow-lg">
                     <i class="fas fa-chart-bar"></i> Statisztikák
                 </button>
-                <button id="settingsBtn" class="bg-white/20 border-2 border-white/30 text-white px-6 py-3 rounded-full cursor-pointer font-semibold transition-all duration-300 backdrop-blur-sm flex items-center gap-2 hover:bg-white/30 hover:-translate-y-1 hover:shadow-lg mt-2">
+                <button id="settingsBtn" class="bg-white/10 border-2 border-white/40 text-white px-6 py-3 rounded-full cursor-pointer font-semibold transition-all duration-300 backdrop-blur-sm flex items-center gap-2 hover:bg-white/25 hover:-translate-y-1 hover:shadow-lg mt-2 shadow-lg">
                     <i class="fas fa-cog"></i> Beállítások
                 </button>
             </div>
